# CmakeCppTemplate

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeProjectOptions.cmake  CmakeCppTemplate.code-workspace  OpenCppCoverage.config.txt  README.md  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  gitconfig-identity.sh  postCreate.sh
.github/: constants.env
.github/actions/setup_cache/: action.yml
.github/actions/vcpkg_cache/: action.yml
.github/template/: README.md  template_name  template_repository
.github/workflows/: ci.yml  template-janitor.yml
CMake/: BuildOutput.cmake  BuildTypes.cmake  CodeHardening.cmake  Fuzzer.cmake  GetCPM.cmake  InterproceduralOptimization.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake
CMake/toolchains/: linux_clang.cmake
CMake/vcpkg-triplets/: x64-linux-clang-libcxx.cmake
Projects/Config/: CMakeLists.txt
Projects/Config/Config/: Config.h.in
Projects/Sample/: CMakeLists.txt  main.cpp
Projects/Sample/Sample/: Sample.benchmark.cpp  Sample.catch2.cpp  Sample.cpp  Sample.fuzzer.cpp  Sample.fuzztest.cpp  Sample.gtest.cpp  Sample.h
Projects/SampleApp/: CMakeLists.txt  main.cpp
Vcpkg/ChainloadToolchains/: linux-clang.chainload.cmake
Vcpkg/OverlayTriplets/: x64-linux-clang-libcxx.cmake
wip.devcontainer/: devcontainer.json
wip.github/workflows/: template-cleanup.yml
